# etap

./: CMakeLists.txt  LICENSE  README.md
include/: etap.h
unittests/: assertfalse_onfail_test_expected_data.txt  assertfalse_onpass_test_expected_data.txt  asserttrue_onfail_test_expected_data.txt  etap_assertfalse_onfail_unittest.cpp  etap_assertfalse_onpass_unittest.cpp  etap_asserttrue_onfail_unittest.cpp  etap_asserttrue_onpass_unittest.cpp  etap_expecttrue_onfail_unittest.cpp  etap_expecttrue_onpass_unittest.cpp  etap_failingcases_unittest.c  etap_infra_unittest.cpp  etap_minimal_unittest.cpp  etap_passingcases_unittest.cpp  expecttrue_onfail_test_expected_data.txt  expecttrue_onpass_test_expected_data.txt  failing_test_expected_data.txt  infra_test_expected_data.txt  minimal_test_expected_data.txt  passing_test_expected_data.txt  run_etap_unit_tests.sh
